summative.moria.Moria.scala.error
Compilation error:
Moria:19: error: value unary_! is not a member of java.awt.Color
    while((!estSurBiscuit) && (!getCouleurSol()!=Color.GREEN)){
                               ^